decal-macros/tests/ui/fail/top_level_snippet.rs
use decal::decal;

fn main() {
    let _ = decal! {
        Snippet { let x = 5; }
    };
}
