decal-macros/tests/ui/fail/top_level_snippet.stderr
error: top-level node most not be a snippet
 --> tests/ui/fail/top_level_snippet.rs:5:9
  |
5 |         Snippet { let x = 5; }
  |         ^^^^^^^
